=head1 NAME

Changes - Apache::Test change logfile

=head1 CHANGES

=over 3

=item 1.31-rc2

Add conditional to ignore IfVersion directive if mod_version is not built.
[Adam Prime <adam.prime@utoronto.ca>, Fred Moyer <phred@apache.org>]

PR: 41239
t/TEST -ping does not return a valid return code to the calling shell
[ozw1z5rd <alessio.palma@staff.dada.net>]

Prevent infinite loop when no default apxs or httpd is present and repeated
attempts to run the test suite under an automated harness (such as a cpan 
smoke test).  Issue reported by CORION and ANDK, PR: 12911
[Fred Moyer <phred@apache.org>]

Use need_module('mod_cgi.c') and need_module('mod_cgid.c') in 
t/next_available_port.t instead of need_cgi.  On case insensitive file
systems such as OS X, need_cgi will fulfill the requirement with cgi.pm,
when mod_cgi.c is the desired requirement.
[Fred Moyer <phred@apache.org>]

Fix overridden get_basic_credentials test when using NTLM authentication
[Rick Frankel <cpan@rickster.com>]

Work around a bug introduced in libwww-perl in version
5.820 for httpd's credentials
[Gunnar Wolf <gwolf@gwolf.org>, Niko Tyni <ntyni@debian.org>]

Make Apache::TestConfig::untaint_path tolerate undefined arguments
[Torsten Foertsch <torsten.foertsch@gmx.net]

Inherit LoadFile directives from the global httpd.conf
[Torsten Foertsch <torsten.foertsch@gmx.net]

Don't overwrite php.ini if it already exists
PR: 32994
[MAHEX <MAHEX@cpan.org>]

=item 1.30 November 26, 2007

Added t_write_test_lib for temporary testing packages
[Fred Moyer <fred@redhotpenguin.com>]

Fix syntax error in generated PHP files t/conf/*.php.in
[Philippe M. Chiasson]

Add bwshare.so to the list of modules to not inherit b/c
it rate limits requests to less then that of a test suite.
PR: 25548
[imacat <imacat@mail.imacat.idv.tw>]

Add EXTRA_CFLAGS to c-module building if defined in the environment
[Geoffrey Young]

=item 1.29 November 28, 2006

Require a minium of Module::Build 0.18 when using Apache::TestMB.
PR: 19513